# lmgl

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  buffer_8hpp.html  buffer_8hpp.js  buffer_8hpp_source.html  button_8cpp.html  button_8hpp.html  button_8hpp.js  button_8hpp_source.html  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  canvas_8hpp.html  canvas_8hpp.js  canvas_8hpp_source.html  classes.html  classlmgl_1_1Input-members.html  classlmgl_1_1Input.html  classlmgl_1_1assets_1_1ModelLoader-members.html  classlmgl_1_1assets_1_1ModelLoader.html  classlmgl_1_1assets_1_1TextureLibrary-members.html  classlmgl_1_1assets_1_1TextureLibrary.html  classlmgl_1_1assets_1_1TextureLibrary.js  classlmgl_1_1core_1_1Engine-members.html  classlmgl_1_1core_1_1Engine.html  classlmgl_1_1core_1_1Engine.js  classlmgl_1_1renderer_1_1BufferLayout-members.html  classlmgl_1_1renderer_1_1BufferLayout.html  classlmgl_1_1renderer_1_1BufferLayout.js  classlmgl_1_1renderer_1_1CubemapShadowMap-members.html  classlmgl_1_1renderer_1_1CubemapShadowMap.html  classlmgl_1_1renderer_1_1CubemapShadowMap.js  classlmgl_1_1renderer_1_1Framebuffer-members.html  classlmgl_1_1renderer_1_1Framebuffer.html  classlmgl_1_1renderer_1_1Framebuffer.js  (+298 more)
.github/workflows/: cmake_multiplatform.yml  doxygen.yml
examples/: CMakeLists.txt  README.md  json_ui_demo.cpp  main.cpp  ovr_stereo_demo.cpp  simple_example.cpp
examples/assets/: Hanoi.gltf  ratchet_wrench_4k.gltf  ui_demo.json
include/lgml/core/: engine.hpp
include/lmgl/: input.hpp  lmgl.hpp
include/lmgl/assets/: model_loader.hpp  texture_library.hpp
include/lmgl/core/: engine.hpp
include/lmgl/renderer/: buffer.hpp  framebuffer.hpp  renderer.hpp  shader.hpp  shadow_map.hpp  texture.hpp  vertex_array.hpp
include/lmgl/scene/: camera.hpp  frustum.hpp  light.hpp  lod.hpp  material.hpp  mesh.hpp  node.hpp  scene.hpp  skybox.hpp
include/lmgl/ui/: button.hpp  canvas.hpp  font.hpp  image.hpp  panel.hpp  slider.hpp  text.hpp  toggle.hpp  ui_element.hpp  ui_loader.hpp
include/lmgl/vr/: ovr_backend.hpp
sandbox/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+62 more)
shaders/: basic.frag  basic.glsl  basic.vert  blur.glsl  bright_pass.glsl  dir_light_depth.glsl  equirect_to_cubemap.glsl  flat_color.frag  flat_color.glsl  flat_color.vert  pbr.frag  pbr.glsl  pbr.vert  postprocess.glsl  pt_light_depth.glsl  skybox.frag  skybox.glsl  skybox.vert  ui_image.glsl  ui_panel.glsl  ui_text.glsl
src/: input.cpp
src/assets/: model_loader.cpp  texture_library.cpp
src/core/: engine.cpp
src/renderer/: buffer.cpp  framebuffer.cpp  renderer.cpp  shader.cpp  shadow_map.cpp  texture.cpp  vertex_array.cpp
src/scene/: camera.cpp  frustum.cpp  light.cpp  lod.cpp  material.cpp  mesh.cpp  node.cpp  scene.cpp  skybox.cpp
src/ui/: button.cpp  canvas.cpp  font.cpp  image.cpp  panel.cpp  slider.cpp  text.cpp  toggle.cpp  ui_element.cpp  ui_loader.cpp
src/vr/: ovr_backend.cpp
test/: CMakeLists.txt
test/assets/: model_loader_test.cpp  texture_library_test.cpp
test/core/: engine_test.cpp
test/renderer/: buffer_test.cpp  framebuffer_test.cpp  renderer_test.cpp  shader_test.cpp  shadow_map_test.cpp  texture_test.cpp  vertex_array_test.cpp
test/scene/: camera_test.cpp  frustum_test.cpp  light_test.cpp  lod_test.cpp  material_test.cpp  mesh_test.cpp  node_test.cpp  scene_test.cpp  skybox_test.cpp
test/ui/: ui_element_canvas_test.cpp
